@@ -1,5 +1,11 @@
 2.0b2
 -----
+
+Added Hard Token funtionallity, EJBCA ca now be used to issue EID Smard Card tokens
+and store pin/puk data in database. PrimeCard klient (www.primekey,se) module required.
+
+Added Key Recover funtionallity.
+Added Extended Key Usage to certificateprofiles.
 Changed initial temporary super administrator from "CN=Walter" to "CN=
 SuperAdmin".
 Removed CA and ROOTCA types in "ra adduser" cmd, from now on use certificate
